Mac app bundling and auto-updating 'tentative'